# a_python_thing

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  solution.drawio
async_api/: async.drawio  main.py
blobtools/: README.md  pyproject.toml  setup.azcli
blobtools/blobtools/: clients.py  config.py  logging.py  models.py
blobtools/blobtools/saga_blobs/: step_1_generate.py  step_2_sagas.py  step_3_results.py  step_4_blob_index_tag_queries.py
blobtools/blobtools/timeseries_blobs/: step_1_generate.py
blobtools/infastructure/: main.bicep  setup.azcli
blobtools/infrastructure/: main.bicep
blobtools/typescript/: README.md  package-lock.json  package.json  random_input.ts  sagas.ts  step1.ts
deliveryguy/: pyproject.toml
edge_dev/: index.html  worker.js
infrastructure/: azuredeploy.bicep  azuredeploy.json  setup.azcli
infrastructure/as_tf/: main.tf
pizza_library/: pyproject.toml
pizza_library/pizza_library/: database.py  functions.py  messaging.py  startup.py  storage.py
pizza_maker/: pyproject.toml
pizza_maker/pizza_maker/: __main__.py
pizza_shop/: README.md  pyproject.toml
pizza_shop/pizza_shop/: __init__.py  __main__.py  webapp.py
pizzaiolo/: pyproject.toml
pizzalibrary/: pyproject.toml
pizzalibrary/pizzalibrary/: database.py  functions.py  messaging.py  models.py  startup.py  storage.py
ui-tests/: package-lock.json  playwright.config.ts
ui-tests/tests/: example.spec.ts  test-1.spec.ts  test-2.spec.ts  todo-app-source.html  todos.spec.ts
website/: package-lock.json  package.json
website/src/: App.tsx
