[tool.poetry]
name = "pizza-shop"
version = "0.1.0"
description = ""
authors = ["Andre Bossard <anbossar@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.1,<0.110.0"
reactpy = "^1.0.2"
opentelemetry-exporter-zipkin = "^1.21.0"
uvicorn = "^0.24.0.post1"
opentelemetry-instrumentation-fastapi = "^0.42b0"
pizza_library = {path = "../pizza_library", develop = true}
opentelemetry-exporter-otlp = "^1.21.0"
azure-monitor-opentelemetry-exporter = "^1.0.0b19"
opentelemetry-sdk = "^1.21.0"
azure-servicebus = "^7.11.4"
azure-core = "^1.29.5"
sqlite-utils = "^3.35.2"
azure-storage-blob = "^12.19.0"
azure-identity = "^1.15.0"
azure-monitor-opentelemetry = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
